# ramifi

./: .gitignore  Cargo.toml  README.md  fork_notes.desktop  index.html  install.sh  release.sh
.github/workflows/: rust.yml
src/: main.rs
